sumo/tests/duarouter/alternatives/style1_input/errors/routealt/testsuite.duarouter
# Route alternative's id is empty
routealt_id_empty

# Route alternative's id is not given
routealt_id_missing


# Route alternative's last route information is empty
routealt_last_empty

# Route alternative's last route information is not numeric
routealt_last_false

# Route alternative's last route information is not given
routealt_last_missing

# Route alternative's last route information is negative
routealt_last_negative

